k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkedin-pipeline
  labels:
    app.kubernetes.io/part-of: linkedin-pipeline
